[metadata]
name = TappingBOT-AI
version = version number: 1.0.0
license = GPL 2.0
description = Artificial Intelligence for TappingBOT
long_description = file: README.rst
author = Mario Avolio
author_email = marioavolio@protonmail.com
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Natural Language :: English

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    mahotas~=1.4.11
    numpy~=1.17.0
    networkx~=2.2
    pip~=21.1.3

[options.packages.find]
where = src
