[metadata]
name = TappingBOT-AI
version = version number: 1.0.0
license = GPL 2.0
description = Artificial Intelligence for TappingBOT
long_description = file: README.rst
author = Mario Avolio
author_email = marioavolio@protonmail.com

[options]
packages = find:
package_dir =
    =src
include_package_data = True

[options.packages.find]
where = src
