[metadata]
name = TappingBOT-AI
version = version number: 1.0.0
license = Apache-2.0 License
description = Artificial Intelligence for TappingBOT
long_description = file: README.rst
author = Mario Avolio
author_email = marioavolio@protonmail.com

[options]
packages = find:
package_dir =
    =src
include_package_data = True

[options.packages.find]
where = src
